# TaskManagerQt

./: AudioManager.cpp  AudioManager.h  CMakeLists.txt  README.md  README.ru.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  task.cpp  task.h  taskmaneger.cpp  taskmaneger.h
